ICE-9482 fixed misalignment issue with the cancel deletion button in the event details dialog on Edge browser; fixed issue with displaying the previous month when adding a new event in day view; replace dayClick and timeClick events for dblclick ajax events dayDblclick and timeDblclick; added CSS padding:0 to td elements in the grid; added year in the main header in the week view; add month name in week view sidebar events list, for weeks that encompass two months; added code to close event details popup on save, in cases where there are no changes; added component javascript resources to the compress target in build.xml; added copyright notice to Javascript resource
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@49642 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
@@ -167,6 +167,7 @@
 }
 .ice-ace-schedule .schedule-grid td {
 	vertical-align: top;
+	padding: 0;
 }
 .ice-ace-schedule .schedule-details-tooltip .ui-dialog-titlebar {
 	display: none;
